--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="row px-3 py-3 mt-5">
            <div class="col px-0">
            <h2 class="call">"Hello! Sharing World!"</h2>
-           <h1 class="call mt-3">Creative Space<br>Zambia Summit 2022</h1>
+           <h1 class="call-title mt-3">Creative Space<br>Zambia Summit 2022</h1>
            <p class="description">Zambia's creative minds making impact and Technology<br> breakthrough are comming
            together to <span>re-think</span> and <span>re-imagine</span><span> design</span> </p>
            <div class="venue-highlight">
