Fix linter errors

--- a/about.html
+++ b/about.html
@@ -42,7 +42,6 @@
           </ul>
         </nav>
     </div>
-    </div>
     <section class="hero-section-about container-fluid">
       <div class="container-fluid py-md-4 mt-md-4">
           <div class="row px-3 py-3 mt-5">
@@ -98,21 +97,23 @@
          <p class="p-3 d-flex justify-content-center">Take a look at he last two CS Zambia Summits
              which took place in Lusaka and Ndola.
         </p>
-         
+         </div>
+         </div>
        <div class="events mt-3">
         <div class="event">
-          <img src="./assets/images/events/events3.jpg" alt="event" style="width:100%;">
+          <img src="./assets/images/events/events3.jpg" alt="event">
           <div class="content">
             <p>2021 <br> CS Zambia Summit 2021 in Lusaka</p>
           </div>
         </div>
         <div class="event">
-          <img src="./assets/images/events/events2.jpg" alt="event" style="width:100%;">
+          <img src="./assets/images/events/events2.jpg" alt="event">
           <div class="content">
             <p>2022 <br> CS Zambia Summit 2022 in Ndola</p>
           </div>
         </div>
       </div>
+    </div>
 </section>
 
 <section class="speaker-partner container-fluid mb-5 mt-5">
