Fix linter errors

--- a/about.html
+++ b/about.html
@@ -61,7 +61,6 @@
            </div>
           </div>
          </div>
-        </div>
   </section>
   </header>
 
@@ -160,7 +159,7 @@
     </div>
     <div class="footer-info text-dark">
       <p> Building safe coommunities to power creative innovations <br>and designs</p>
-      <p> 2022 Creative Space Sumit, Some Rights Reserved</p>
+      <p> 2022 Creative Space Sumit, Some Rights Reserved ⬇️</p>
     </div>
 </footer>
   
