--- a/index.html
+++ b/index.html
@@ -171,13 +171,12 @@
   <img src="./assets/images/speakers/Lukonga-Lindunda.jpg" alt="profile image" class="img-profile">
   <div class="speaker-info">
     <h3 class="speaker-name">Yochai Benkler</h3>
-    <p class="role">Founder of Bongo Hive,CEO</p>
+    <p class="role">Founder of Bongo Hive,CEO 🚀 </p>
     <p class="bio"> Lukonga is a Startup Ecosystem Builder who is also a Mandela Washington Fellow and has 14 years of experience working with entrepreneurs and development partners.</p>
   </div> 
 </div>
 </div>
 </div>
-  </div>
     <div class="more-btn">
     <button type="button">More <img src="./assets/images/arrow_down.png" alt="more icon"></button>
     </div>
