Add Dynamic Content
Implement dynamic content for feature page

--- a/index.html
+++ b/index.html
@@ -119,77 +119,11 @@
     <h2>Featured Speaker</h2>
     <hr class="line mt-3">
   </div>
-  <div class="speakers mt-5">
-    <div class="speaker">
-      <img src="./assets/images/speakers/peter.jpg" alt="profile image" class="img-profile">
-      <div class="speaker-info">
-        <h3 class="speaker-name">Yochai Benkler</h3>
-        <p class="role">Founder of HPML,Fashion Designe</p>
-        <p class="bio">Peter is an emerging fashion designer and award winner of Lusaka July</p>
-      </div>
-      </div>
-      <div class="speaker">
-        <img src="./assets/images/speakers/Lukonga-Lindunda.jpg" alt="profile image" class="img-profile">
-        <div class="speaker-info">
-          <h3 class="speaker-name">Yochai Benkler</h3>
-          <p class="role">Founder of Bongo Hive,CEO</p>
-          <p class="bio"> Lukonga is a Startup Ecosystem Builder who is also a Mandela Washington Fellow and has 14 years of experience working with entrepreneurs and development partners.</p>
-        </div> 
-      </div>
-    <div class="speaker speaker-hide">
-      <img src="./assets/images/speakers/Lukonga-Lindunda.jpg" alt="profile image" class="img-profile">
-      <div class="speaker-info">
-        <h3 class="speaker-name">Yochai Benkler</h3>
-        <p class="role">Founder of Bongo Hive,CEO</p>
-        <p class="bio"> Lukonga is a Startup Ecosystem Builder who is also a Mandela Washington Fellow and has 14 years of experience working with entrepreneurs and development partners.</p>
-      </div> 
-   </div>
-
-   <div class="speaker speaker-hide">
-    <img src="./assets/images/speakers/Lukonga-Lindunda.jpg" alt="profile image" class="img-profile">
-    <div class="speaker-info">
-      <h3 class="speaker-name">Yochai Benkler</h3>
-      <p class="role">Founder of Bongo Hive,CEO</p>
-      <p class="bio"> Lukonga is a Startup Ecosystem Builder who is also a Mandela Washington Fellow and has 14 years of experience working with entrepreneurs and development partners.</p>
-    </div> 
- </div>
-
- <div class="speaker speaker-hide">
-  <img src="./assets/images/speakers/Lukonga-Lindunda.jpg" alt="profile image" class="img-profile">
-  <div class="speaker-info">
-    <h3 class="speaker-name">Yochai Benkler</h3>
-    <p class="role">Founder of Bongo Hive,CEO</p>
-    <p class="bio"> Lukonga is a Startup Ecosystem Builder who is also a Mandela Washington Fellow and has 14 years of experience working with entrepreneurs and development partners.</p>
-  </div> 
-</div>
-
-<div class="speaker speaker-hide">
-  <img src="./assets/images/speakers/Lukonga-Lindunda.jpg" alt="profile image" class="img-profile">
-  <div class="speaker-info">
-    <h3 class="speaker-name">Yochai Benkler</h3>
-    <p class="role">Founder of Bongo Hive,CEO</p>
-    <p class="bio"> Lukonga is a Startup Ecosystem Builder who is also a Mandela Washington Fellow and has 14 years of experience working with entrepreneurs and development partners.</p>
-  </div> 
-</div>
-<div class="speaker speaker-hide">
-  <img src="./assets/images/speakers/Lukonga-Lindunda.jpg" alt="profile image" class="img-profile">
-  <div class="speaker-info">
-    <h3 class="speaker-name">Yochai Benkler</h3>
-    <p class="role">Founder of Bongo Hive,CEO</p>
-    <p class="bio"> Lukonga is a Startup Ecosystem Builder who is also a Mandela Washington Fellow and has 14 years of experience working with entrepreneurs and development partners.</p>
-  </div> 
-</div>
-<div class="speaker speaker-hide">
-  <img src="./assets/images/speakers/Lukonga-Lindunda.jpg" alt="profile image" class="img-profile">
-  <div class="speaker-info">
-    <h3 class="speaker-name">Yochai Benkler</h3>
-    <p class="role">Founder of Bongo Hive,CEO 🚀 </p>
-    <p class="bio"> Lukonga is a Startup Ecosystem Builder who is also a Mandela Washington Fellow and has 14 years of experience working with entrepreneurs and development partners.</p>
-  </div> 
-</div>
+  <div class="speakers mt-5" id="speakerList">
+     
 </div>
     <div class="more-btn">
-    <button type="button">More <img src="./assets/images/arrow_down.png" alt="more icon"></button>
+    More
     </div>
 </section>
 
