--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
           </div>
           <ul class="menu-items mobile-menu hide-menu">
             <li class="menu-item">
-              <a href="index.html">home</a>
+              <a href="index.html">Home</a>
             </li>
             <li class="menu-item">
               <a href="#program">Program</a>
