--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="http://fonts.cdnfonts.com/css/cocogoose" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/style.css">
   <title>Creative Space</title>
 </head>
 <body>
-  <header class="header container-fluid p-3 m-3">
+  <header class="header container-fluid pb-3 mb-3">
     <div class="profile-settings d-flex align-items-baseline justify-content-end">
       <div class=" profile d-flex align-items-baseline">
        <i class="fa fa-facebook p-3"></i>
