Updated code review changes

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <title>Creative Space</title>
 </head>
 <body>
-  <header class="header container-fluid pb-3 mb-3">
-    <div class="profile-settings d-flex align-items-baseline justify-content-end">
+  <header class="header">
+    <div class="profile-settings d-flex align-items-baseline justify-content-end w-100">
       <div class=" profile d-flex align-items-baseline">
        <i class="fa fa-facebook p-3"></i>
        <i class="fa fa-twitter p-3"></i>
@@ -24,7 +24,7 @@
        </ul>
    </div>
    </div>
-    <div class="nav  desktop container-fluid">
+    <div class="nav  desktop">
         <img src="./assets/images/mobile_menu.png" id="menu-btn" alt="menu icon">
         <nav class="menu">
           <div class="logo">
@@ -55,8 +55,8 @@
           </ul>
         </nav>
     </div>
-    <section class="hero-section container-fluid pt-2 w-100">
-      <div class="container-fluid inner-hero py-md-4 mt-md-4">
+    <section class="hero-section">
+      <div class="container-fluid inner-hero py-md-4">
           <div class="row px-3 py-3 mt-5">
            <div class="col px-0">
            <h2 class="call">"Hello! Sharing World!"</h2>
