--- a/about.html
+++ b/about.html
@@ -10,8 +10,8 @@
   <title>Creative Space</title>
 </head>
 <body>
-  <header class="about-header container-fluid p-3 m-3">
-    <div class="profile-settings d-flex align-items-baseline justify-content-end">
+  <header class="about-header">
+    <div class="profile-settings d-flex align-items-baseline justify-content-end w-100">
       <div class=" profile d-flex align-items-baseline">
        <i class="fa fa-facebook p-3"></i>
        <i class="fa fa-twitter p-3"></i>
@@ -23,7 +23,7 @@
        </ul>
    </div>
    </div>
-    <div class="nav  desktop container-fluid">
+    <div class="nav  desktop w-100">
         <img src="./assets/images/mobile_menu.png" id="menu-btn" alt="menu icon">
         <nav class="menu">
           <div class="logo">
@@ -55,7 +55,7 @@
         </nav>
     </div>
     <section class="hero-section-about container-fluid">
-      <div class="container-fluid py-md-4 mt-md-4">
+      <div class="container-fluid py-md-4">
           <div class="row px-3 py-3 mt-5">
            <div class="col px-0">
            <h2 class="call d-flex justify-content-center ps-5">"Hello! Sharing World!"</h2>
